# projet_openpyxl_superstore

./: .gitignore  README.md  main.py  pyproject.toml
components/: charts.py  filter.py  indicators.py  styles.py
data/: data.py
notebooks/: notebook.ipynb
output/: reporting.xlsx
src/projet_openpyxl_superstore/components/: charts.py  filter.py  indicators.py  styles.py  tables.py
src/projet_openpyxl_superstore/data/: data.py
