[project]
name = "tuto-openpyxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.29",
    "geopandas>=1.1.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "openpyxl==3.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
